project(swarm_skeleton_server)

# source files
set(SOURCE_FILES
  ../shared/achievement_saverestore.cpp
  ../shared/achievementmgr.cpp
  ../shared/activitylist.cpp
  ../shared/deferred/CDefLight.cpp
  ../shared/deferred/CDefLightContainer.cpp
  ../shared/deferred/CDefLightGlobal.cpp
  ../shared/deferred/deferred_shared_common.cpp
  ../shared/predicted_viewmodel.cpp
  ../shared/sdk/sdk_fx_shared.cpp
  ../shared/sdk/sdk_gamemovement.cpp
  ../shared/sdk/sdk_gamerules.cpp
  ../shared/sdk/sdk_playeranimstate.cpp
  ../shared/sdk/sdk_player_shared.cpp
  ../shared/sdk/sdk_shareddefs.cpp
  ../shared/sdk/sdk_usermessages.cpp
  ../shared/sdk/sdk_weapon_parse.cpp
  ../shared/sdk/weapon_mp5.cpp
  ../shared/sdk/weapon_pistol.cpp
  ../shared/sdk/weapon_sdkbase.cpp
  ai_activity.cpp
  ai_addon.cpp
  ai_agent.cpp
  ai_baseactor.cpp
  ai_basehumanoid.cpp
  ai_basenpc.cpp
  ai_basenpc_flyer.cpp
  ai_basenpc_flyer_new.cpp
  ai_basenpc_movement.cpp
  ai_basenpc_physicsflyer.cpp
  ai_basenpc_schedule.cpp
  ai_basenpc_squad.cpp
  ai_behavior.cpp
  ai_behavior_assault.cpp
  ai_behavior_fear.cpp
  ai_behavior_fightfromcover.cpp
  ai_behavior_follow.cpp
  ai_behavior_lead.cpp
  ai_behavior_rappel.cpp
  ai_behavior_standoff.cpp
  ai_blended_movement.cpp
  ai_concommands.cpp
  ai_condition.cpp
  ../shared/ai_criteria.cpp
  ai_default.cpp
  ai_dynamiclink.cpp
  ai_event.cpp
  ai_expresserfollowup.cpp
  ai_goalentity.cpp
  ai_hint.cpp
  ai_hull.cpp
  ai_initutils.cpp
  AI_Interest_Target.cpp
  ai_link.cpp
  ai_localnavigator.cpp
  ai_looktarget.cpp
  ai_memory.cpp
  ai_motor.cpp
  ai_moveprobe.cpp
  ai_moveshoot.cpp
  ai_movesolver.cpp
  ai_namespaces.cpp
  ai_navigator.cpp
  ai_network.cpp
  ai_networkmanager.cpp
  ai_node.cpp
  ai_pathfinder.cpp
  ai_planesolver.cpp
  ai_playerally.cpp
  ai_relationship.cpp
  ../shared/ai_responsesystem.cpp
  ai_route.cpp
  ai_saverestore.cpp
  ai_schedule.cpp
  ai_scriptconditions.cpp
  ai_senses.cpp
  ai_sentence.cpp
  ai_speech.cpp
  ../shared/ai_speechconcept.cpp
  ai_speechfilter.cpp
  ai_speechqueue.cpp
  ai_squad.cpp
  ai_squadslot.cpp
  ai_tacticalservices.cpp
  ai_task.cpp
  ai_trackpather.cpp
  ai_utils.cpp
  ai_waypoint.cpp
  ambientgeneric.cpp
  ../shared/ammodef.cpp
  ../shared/animation.cpp
  ../shared/base_playeranimstate.cpp
  base_transmit_proxy.cpp
  ../shared/baseachievement.cpp
  baseanimating.cpp
  BaseAnimatingOverlay.cpp
  basecombatcharacter.cpp
  ../shared/basecombatcharacter_shared.cpp
  basecombatweapon.cpp
  ../shared/basecombatweapon_shared.cpp
  baseentity.cpp
  ../shared/baseentity_shared.cpp
  baseflex.cpp
  ../shared/basegrenade_shared.cpp
  basemultiplayerplayer.cpp
  ../shared/baseparticleentity.cpp
  ../shared/baseplayer_shared.cpp
  baseviewmodel.cpp
  ../shared/baseviewmodel_shared.cpp
  ../shared/beam_shared.cpp
  beamspotlight.cpp
  bitstring.cpp
  bmodels.cpp
  ../../public/tools/bonelist.cpp
  buttons.cpp
  cbase.cpp
  cbaseprojectile.cpp
  client.cpp
  ../../public/closedcaptions.cpp
  coerciblevariant_t.cpp
  ../shared/collisionproperty.cpp
  ../../public/collisionutils.cpp
  colorcorrection.cpp
  colorcorrectionvolume.cpp
  CommentarySystem.cpp
  controlentities.cpp
  cplane.cpp
  CRagdollMagnet.cpp
  cvisibilitymonitor.cpp
  damagemodifier.cpp
  ../shared/death_pose.cpp
  ../../common/debug_dll_check.cpp
  ../shared/debugoverlay_shared.cpp
  ../shared/decals.cpp
  deferred/cdeferred_manager_server.cpp
  doors.cpp
  ../../public/dt_send.cpp
  ../../public/dt_utlvector_common.cpp
  ../../public/dt_utlvector_send.cpp
  dynamiclight.cpp
  ../../public/editor_sendcommand.cpp
  ../shared/effect_dispatch_data.cpp
  effects.cpp
  EffectsServer.cpp
  ../shared/ehandle.cpp
  entityblocker.cpp
  EntityDissolve.cpp
  EntityFlame.cpp
  EntityFreezing.cpp
  entitylist.cpp
  ../shared/entitylist_base.cpp
  EntityParticleTrail.cpp
  ../shared/EntityParticleTrail_Shared.cpp
  env_ambient_light.cpp
  env_debughistory.cpp
  ../shared/env_detail_controller.cpp
  env_dof_controller.cpp
  env_effectsscript.cpp
  env_entity_maker.cpp
  env_global_light.cpp
  env_instructor_hint.cpp
  env_particlescript.cpp
  env_player_surface_trigger.cpp
  env_projectedtexture.cpp
  env_screenoverlay.cpp
  env_texturetoggle.cpp
  env_tonemap_controller.cpp
  ../shared/env_wind_shared.cpp
  env_zoom.cpp
  EnvBeam.cpp
  EnvFade.cpp
  EnvHudHint.cpp
  EnvLaser.cpp
  EnvMessage.cpp
  envmicrophone.cpp
  EnvShake.cpp
  EnvSpark.cpp
  ../shared/eventlist.cpp
  EventLog.cpp
  explode.cpp
  ../../public/filesystem_helpers.cpp
  filters.cpp
  fire_smoke.cpp
  fish.cpp
  flex_expresser.cpp
  fogcontroller.cpp
  fogvolume.cpp
  foundryhelpers_server.cpp
  fourwheelvehiclephysics.cpp
  func_areaportal.cpp
  func_areaportalbase.cpp
  func_areaportalwindow.cpp
  func_break.cpp
  func_breakablesurf.cpp
  func_dust.cpp
  func_instance_io_proxy.cpp
  ../shared/func_ladder.cpp
  func_ladder_endpoint.cpp
  func_lod.cpp
  hl2/Func_Monitor.cpp
  func_movelinear.cpp
  func_occluder.cpp
  func_reflective_glass.cpp
  func_smokevolume.cpp
  game.cpp
  ../shared/game_timescale_shared.cpp
  game_ui.cpp
  gamehandle.cpp
  gameinterface.cpp
  ../shared/gamemovement.cpp
  ../shared/gamerules.cpp
  ../shared/gamerules_register.cpp
  ../shared/GameStats.cpp
  GameStats_BasicStatsFunctions.cpp
  ../shared/gamestringpool.cpp
  gametrace_dll.cpp
  ../shared/gamevars_shared.cpp
  gameweaponmanager.cpp
  genericactor.cpp
  genericmonster.cpp
  gib.cpp
  global_event_log.cpp
  globals.cpp
  globalstate.cpp
  grenadethrown.cpp
  guntarget.cpp
  h_ai.cpp
  h_export.cpp
  hierarchy.cpp
  ../shared/hintmessage.cpp
  ../shared/hintsystem.cpp
  hltvdirector.cpp
  ../shared/igamesystem.cpp
  info_camera_link.cpp
  info_overlay_accessor.cpp
  inforemarkable.cpp
  init_factory.cpp
  intermission.cpp
  ../../public/interpolatortypes.cpp
  item_world.cpp
  ../../public/keyframe/keyframe.cpp
  lightglow.cpp
  lights.cpp
  logic_measure_movement.cpp
  logic_navigation.cpp
  logic_playerproxy.cpp
  logic_playmovie.cpp
  logic_random_outputs.cpp
  logicauto.cpp
  logicentities.cpp
  logicrelay.cpp
  ../../public/map_utils.cpp
  mapentities.cpp
  ../shared/mapentities_shared.cpp
  maprules.cpp
  MaterialModifyControl.cpp
  ../../public/tier0/memoverride.cpp
  message_entity.cpp
  modelentities.cpp
  ../shared/ModelSoundsCache.cpp
  monstermaker.cpp
  movehelper_server.cpp
  movement.cpp
  ../shared/movevars_shared.cpp
  movie_display.cpp
  ../shared/mp_shareddefs.cpp
  ../shared/multiplay_gamerules.cpp
  ndebugoverlay.cpp
  ../../public/networkvar.cpp
  npc_vehicledriver.cpp
  ../shared/obstacle_pushaway.cpp
  particle_light.cpp
  ../shared/particle_parse.cpp
  particle_system.cpp
  ../shared/particlesystemquery.cpp
  pathcorner.cpp
  pathtrack.cpp
  phys_controller.cpp
  physconstraint.cpp
  physics.cpp
  physics_bone_follower.cpp
  physics_cannister.cpp
  physics_fx.cpp
  physics_impact_damage.cpp
  physics_main.cpp
  ../shared/physics_main_shared.cpp
  physics_npc_solver.cpp
  physics_prop_ragdoll.cpp
  physics_prop_statue.cpp
  ../shared/physics_saverestore.cpp
  ../shared/physics_shared.cpp
  physobj.cpp
  player.cpp
  player_command.cpp
  player_lagcompensation.cpp
  player_pickup.cpp
  player_resource.cpp
  player_voice_listener.cpp
  playerinfomanager.cpp
  playerlocaldata.cpp
  plugin_check.cpp
  ../shared/point_bonusmaps_accessor.cpp
  point_camera.cpp
  point_devshot_camera.cpp
  point_entity_finder.cpp
  point_event_proxy.cpp
  point_playermoveconstraint.cpp
  ../shared/point_posecontroller.cpp
  point_spotlight.cpp
  point_template.cpp
  pointanglesensor.cpp
  PointAngularVelocitySensor.cpp
  pointhurt.cpp
  pointteleport.cpp
  postprocesscontroller.cpp
  ../shared/precache_register.cpp
  ../shared/predictableid.cpp
  prop_hallucination.cpp
  props.cpp
  ../shared/props_shared.cpp
  ../shared/querycache.cpp
  ragdoll_manager.cpp
  ../shared/ragdoll_shared.cpp
  RagdollBoogie.cpp
  ../../common/randoverride.cpp
  recipientfilter.cpp
  ../../public/registry.cpp
  replaydirector.cpp
  rope.cpp
  ../shared/rope_helpers.cpp
  ../../public/rope_physics.cpp
  ../shared/saverestore.cpp
  ../shared/SceneCache.cpp
  sceneentity.cpp
  ../shared/sceneentity_shared.cpp
  ../../public/scratchpad3d.cpp
  scratchpad_gamedll_helpers.cpp
  ../../public/ScratchPadUtils.cpp
  scripted.cpp
  scriptedtarget.cpp
  sdk/npc_infected.cpp
  sdk/sdk_bot_temp.cpp
  sdk/sdk_client.cpp
  sdk/sdk_fire.cpp
  sdk/sdk_gameinterface.cpp
  sdk/sdk_player.cpp
  sdk/sdk_playermove.cpp
  sendproxy.cpp
  ../shared/sequence_Transitioner.cpp
  ../../public/server_class.cpp
  serverbenchmark_base.cpp
  ServerNetworkProperty.cpp
  shadowcontrol.cpp
  ../shared/sheetsimulator.cpp
  ../../public/simple_physics.cpp
  ../shared/simtimer.cpp
  ../shared/singleplay_gamerules.cpp
  skyboxswapper.cpp
  SkyCamera.cpp
  slideshow_display.cpp
  sound.cpp
  ../shared/SoundEmitterSystem.cpp
  soundent.cpp
  ../shared/soundenvelope.cpp
  ../../public/SoundParametersInternal.cpp
  soundscape.cpp
  soundscape_system.cpp
  spatialentity.cpp
  spotlightend.cpp
  ../shared/Sprite.cpp
  sprite_perfmonitor.cpp
  ../shared/steamworks_gamestats.cpp
  ../../public/stringregistry.cpp
  ../../public/studio.cpp
  ../shared/studio_shared.cpp
  subs.cpp
  sun.cpp
  sunlightshadowcontrol.cpp
  ../shared/takedamageinfo.cpp
  tanktrain.cpp
  team.cpp
  ../shared/teamplay_gamerules.cpp
  TemplateEntities.cpp
  tempmonster.cpp
  tesla.cpp
  ../shared/test_ehandle.cpp
  test_proxytoggle.cpp
  test_stressentities.cpp
  testfunctions.cpp
  testtraceline.cpp
  textstatsmgr.cpp
  timedeventmgr.cpp
  trains.cpp
  triggers.cpp
  ../shared/usercmd.cpp
  util.cpp
  ../shared/util_shared.cpp
  variant_t.cpp
  vehicle_base.cpp
  vehicle_baseserver.cpp
  ../shared/vehicle_viewblend_shared.cpp
  ../../public/vgui_controls/vgui_controls.cpp
  vgui_gamedll_int.cpp
  vguiscreen.cpp
  ../shared/voice_gamemgr.cpp
  vscript_server.cpp
  ../shared/vscript_shared.cpp
  waterbullet.cpp
  WaterLODControl.cpp
  wcedit.cpp
  ../shared/weapon_parse.cpp
  ../shared/weapon_proficiency.cpp
  weight_button.cpp
  world.cpp
  stdafx.cpp
  basetempentity.cpp
  event_tempentity_tester.cpp
  movie_explosion.cpp
  particle_fire.cpp
  particle_smokegrenade.cpp
  plasma.cpp
  smoke_trail.cpp
  smokestack.cpp
  ../shared/SpriteTrail.cpp
  steamjet.cpp
  te.cpp
  te_armorricochet.cpp
  te_basebeam.cpp
  te_beamentpoint.cpp
  te_beaments.cpp
  te_beamfollow.cpp
  te_beamlaser.cpp
  te_beampoints.cpp
  te_beamring.cpp
  te_beamringpoint.cpp
  te_beamspline.cpp
  te_bloodsprite.cpp
  te_bloodstream.cpp
  te_breakmodel.cpp
  te_bspdecal.cpp
  te_bubbles.cpp
  te_bubbletrail.cpp
  te_clientprojectile.cpp
  te_decal.cpp
  te_dynamiclight.cpp
  te_effect_dispatch.cpp
  te_energysplash.cpp
  te_explosion.cpp
  te_fizz.cpp
  te_footprintdecal.cpp
  hl2/te_gaussexplosion.cpp
  te_glassshatter.cpp
  te_glowsprite.cpp
  te_impact.cpp
  te_killplayerattachments.cpp
  te_largefunnel.cpp
  te_muzzleflash.cpp
  te_particlesystem.cpp
  te_physicsprop.cpp
  te_playerdecal.cpp
  te_projecteddecal.cpp
  te_showline.cpp
  te_smoke.cpp
  te_sparks.cpp
  te_sprite.cpp
  te_spritespray.cpp
  te_worlddecal.cpp
  ../shared/usermessages.cpp
  nav_area.cpp
  nav_colors.cpp
  nav_edit.cpp
  nav_entities.cpp
  nav_file.cpp
  nav_generate.cpp
  nav_ladder.cpp
  nav_merge.cpp
  nav_mesh.cpp
  nav_mesh_factory.cpp
  nav_node.cpp
  nav_simplify.cpp
  hl2/ai_behavior_actbusy.cpp
  hl2/ai_spotlight.cpp
  hl2/antlion_dust.cpp
  hl2/ar2_explosion.cpp
  hl2/cbasehelicopter.cpp
  hl2/cbasespriteprojectile.cpp
  hl2/env_speaker.cpp
  hl2/hl2_eventlog.cpp
  hl2/look_door.cpp
  hl2/monster_dummy.cpp
  hl2/npc_attackchopper.cpp
  hl2/npc_bullseye.cpp
  hl2/npc_combinegunship.cpp
  hl2/npc_enemyfinder.cpp
  hl2/rotorwash.cpp
  entity_tools_server.cpp
  toolframework_server.cpp
)

# header files
set(HEADER_FILES
  ../shared/achievement_saverestore.h
  ../shared/achievementmgr.h
  ../shared/activitylist.h
  ../shared/ai_activity.h
  ../shared/deferred/CDefLight.h
  ../shared/deferred/CDefLightContainer.h
  ../shared/deferred/CDefLightGlobal.h
  ../shared/deferred/deferred_shared_common.h
  ../shared/predicted_viewmodel.h
  ../shared/sdk/sdk_fx_shared.h
  ../shared/sdk/sdk_gamerules.h
  ../shared/sdk/sdk_movedata.h
  ../shared/sdk/sdk_playeranimstate.h
  ../shared/sdk/sdk_player_shared.h
  ../shared/sdk/sdk_shareddefs.h
  ../shared/sdk/sdk_weapon_parse.h
  ../shared/sdk/weapon_sdkbase.h
  ai_addon.h
  ai_agent.h
  ai_baseactor.h
  ai_basehumanoid.h
  ai_basenpc.h
  ai_basenpc_flyer.h
  ai_basenpc_flyer_new.h
  ai_basenpc_physicsflyer.h
  ai_behavior.h
  ai_behavior_assault.h
  ai_behavior_fear.h
  ai_behavior_fightfromcover.h
  ai_behavior_follow.h
  ai_behavior_lead.h
  ai_behavior_rappel.h
  ai_behavior_standoff.h
  ai_behavior_template.h
  ai_behavior_template_generate.h
  ai_blended_movement.h
  ai_component.h
  ai_condition.h
  ../shared/ai_criteria.h
  ai_debug.h
  ../shared/ai_debug_shared.h
  ai_default.h
  ai_dynamiclink.h
  ai_goalentity.h
  ai_hint.h
  ai_hull.h
  ai_initutils.h
  AI_Interest_Target.h
  ai_link.h
  ai_localnavigator.h
  ai_looktarget.h
  ai_memory.h
  ai_motor.h
  ai_moveprobe.h
  ai_moveshoot.h
  ai_movesolver.h
  ai_movetypes.h
  ai_namespaces.h
  ai_navgoaltype.h
  ai_navigator.h
  ai_navtype.h
  ai_network.h
  ai_networkmanager.h
  ai_node.h
  ai_npcstate.h
  ai_obstacle_type.h
  ai_pathfinder.h
  ai_planesolver.h
  ai_playerally.h
  ../shared/ai_responsesystem.h
  ai_route.h
  ai_routedist.h
  ai_saverestore.h
  ai_schedule.h
  ai_scriptconditions.h
  ai_senses.h
  ai_sentence.h
  ai_speech.h
  ../shared/ai_speechconcept.h
  ai_speechfilter.h
  ai_speechqueue.h
  ai_squad.h
  ai_squadslot.h
  ai_tacticalservices.h
  ai_task.h
  ai_trackpather.h
  ai_utils.h
  ai_waypoint.h
  ambientgeneric.h
  ../shared/animation.h
  ../shared/apparent_velocity_helper.h
  ../shared/baseachievement.h
  baseanimating.h
  BaseAnimatingOverlay.h
  basecombatcharacter.h
  basecombatweapon.h
  ../shared/basecombatweapon_shared.h
  baseentity.h
  ../shared/baseentity_shared.h
  baseflex.h
  ../shared/basegrenade_shared.h
  basemultiplayerplayer.h
  ../shared/baseparticleentity.h
  ../shared/baseplayer_shared.h
  BasePropDoor.h
  basetoggle.h
  baseviewmodel.h
  ../shared/baseviewmodel_shared.h
  ../shared/beam_shared.h
  bitstring.h
  ../../public/bone_setup.h
  buttons.h
  cbase.h
  cbaseprojectile.h
  ../shared/choreoactor.h
  ../shared/choreochannel.h
  ../shared/choreoevent.h
  ../shared/choreoscene.h
  client.h
  ../shared/collisionproperty.h
  ../../public/collisionutils.h
  colorcorrection.h
  CRagdollMagnet.h
  cvisibilitymonitor.h
  ../shared/debugoverlay_shared.h
  deferred/cdeferred_manager_server.h
  deferred/deferred_server_common.h
  doors.h
  ../../public/edict.h
  ../../public/editor_sendcommand.h
  ../shared/effect_color_tables.h
  effects.h
  ../../public/eiface.h
  enginecallback.h
  entityapi.h
  entityblocker.h
  EntityDissolve.h
  EntityFlame.h
  EntityFreezing.h
  entityinput.h
  entitylist.h
  entityoutput.h
  EntityParticleTrail.h
  ../shared/entityparticletrail_shared.h
  env_ambient_light.h
  env_debughistory.h
  env_dof_controller.h
  env_player_surface_trigger.h
  env_projectedtexture.h
  env_tonemap_controller.h
  ../shared/env_wind_shared.h
  env_zoom.h
  EnvLaser.h
  EnvMessage.h
  envmicrophone.h
  ../../public/event_flags.h
  event_tempentity_tester.h
  ../shared/eventlist.h
  eventqueue.h
  explode.h
  filters.h
  fire_smoke.h
  fish.h
  fogvolume.h
  foundryhelpers_server.h
  fourwheelvehiclephysics.h
  func_areaportalbase.h
  func_areaportalwindow.h
  func_break.h
  func_breakablesurf.h
  ../shared/func_dust_shared.h
  func_movelinear.h
  game.h
  ../shared/game_timescale_shared.h
  gameinterface.h
  ../shared/gamemovement.h
  ../shared/gamerules.h
  ../shared/GameStats.h
  ../shared/gamestringpool.h
  ../shared/gamevars_shared.h
  gameweaponmanager.h
  generic_classmap.h
  gib.h
  global_event_log.h
  globalstate.h
  globalstate_private.h
  grenadethrown.h
  hierarchy.h
  ../shared/hintmessage.h
  ../shared/hintsystem.h
  #../../common/hl2orange.spa.h
  hltvdirector.h
  ../shared/ichoreoeventcallback.h
  ../shared/igamesystem.h
  info_camera_link.h
  inforemarkable.h
  init_factory.h
  ../../public/interpolatortypes.h
  ../../public/tier2/interval.h
  ../../public/iregistry.h
  ../shared/iscenetokenprocessor.h
  iservervehicle.h
  items.h
  ../../public/ivoiceserver.h
  ../../public/keyframe/keyframe.h
  lights.h
  locksounds.h
  logic_random_outputs.h
  maprules.h
  ../../public/mathlib/mathlib.h
  ../../public/model_types.h
  monstermaker.h
  movehelper_server.h
  movie_explosion.h
  ../shared/multiplay_gamerules.h
  ndebugoverlay.h
  networkstringtable_gamedll.h
  ../../public/networkstringtabledefs.h
  ../shared/obstacle_pushaway.h
  particle_fire.h
  particle_light.h
  ../shared/particle_parse.h
  particle_smokegrenade.h
  pathtrack.h
  ../../public/vphysics/performance.h
  phys_controller.h
  physics.h
  physics_bone_follower.h
  physics_collisionevent.h
  physics_npc_solver.h
  physics_prop_ragdoll.h
  physics_prop_statue.h
  ../shared/physics_saverestore.h
  ../shared/physics_shared.h
  physobj.h
  player.h
  player_command.h
  player_lagcompensation.h
  player_pickup.h
  player_resource.h
  playerlocaldata.h
  ../shared/point_bonusmaps_accessor.h
  point_camera.h
  ../shared/point_posecontroller.h
  point_template.h
  ../../public/mathlib/polyhedron.h
  ../shared/positionwatcher.h
  ../shared/postprocess_shared.h
  postprocesscontroller.h
  ../shared/precache_register.h
  ../shared/predictableid.h
  props.h
  pushentity.h
  ../shared/ragdoll_shared.h
  RagdollBoogie.h
  recipientfilter.h
  replaydirector.h
  rope.h
  ../../public/rope_physics.h
  ../../public/rope_shared.h
  ../shared/saverestore.h
  ../shared/saverestore_bitstring.h
  ../shared/saverestore_utlsymbol.h
  ../shared/saverestore_utlvector.h
  sceneentity.h
  scripted.h
  scriptedtarget.h
  ../shared/scriptevent.h
  ../../public/server_class.h
  sdk/sdk_bot_temp.h
  sdk/sdk_fire.h
  sdk/sdk_player.h
  serverbenchmark_base.h
  ServerNetworkProperty.h
  ../shared/sharedvar.h
  ../../public/shattersurfacetypes.h
  ../shared/sheetsimulator.h
  ../../public/simple_physics.h
  ../shared/simtimer.h
  ../shared/singleplay_gamerules.h
  ../shared/solidsetdefaults.h
  soundent.h
  soundscape.h
  spark.h
  spatialentity.h
  spotlightend.h
  ../shared/Sprite.h
  ../shared/SpriteTrail.h
  ../../public/vphysics/stats.h
  ../../public/steam/steam_api.h
  ../../public/stringregistry.h
  team.h
  ../shared/teamplay_gamerules.h
  ../shared/tempentity.h
  TemplateEntities.h
  ../shared/touchlink.h
  trains.h
  triggers.h
  util.h
  vehicle_sounds.h
  vgui_gamedll_int.h
  vguiscreen.h
  ../../public/mathlib/vmatrix.h
  ../shared/voice_common.h
  ../shared/voice_gamemgr.h
  vscript_server.h
  ../shared/vscript_shared.h
  waterbullet.h
  wcedit.h
  ../shared/weapon_parse.h
  ../shared/weapon_proficiency.h
  world.h
  plasma.h
  smoke_trail.h
  smokestack.h
  steamjet.h
  te.h
  te_basebeam.h
  te_particlesystem.h
  nav.h
  nav_area.h
  nav_colors.h
  nav_entities.h
  nav_ladder.h
  nav_mesh.h
  nav_node.h
  nav_pathfind.h
  hl2/ai_behavior_actbusy.h
  hl2/ai_interactions.h
  hl2/ai_spotlight.h
  hl2/antlion_dust.h
  hl2/ar2_explosion.h
  hl2/cbasehelicopter.h
  hl2/cbasespriteprojectile.h
  hl2/energy_wave.h
  hl2/env_speaker.h
  hl2/npc_attackchopper.h
  hl2/npc_bullseye.h
  hl2/rotorwash.h
  #../../public/mathlib/amd3dx.h
  ../shared/ammodef.h
  ../shared/base_playeranimstate.h
  base_transmit_proxy.h
  ../../public/basehandle.h
  basetempentity.h
  ../../public/tier0/basetypes.h
  ../shared/beam_flags.h
  ../../public/tier1/bitbuf.h
  ../../public/bittools.h
  ../../public/bitvec.h
  ../../public/bone_accessor.h
  ../../public/tools/bonelist.h
  ../../public/bspfile.h
  ../../public/bspflags.h
  ../../public/mathlib/bumpvects.h
  #../../public/cache_user.h
  ../shared/cellcoord.h
  ../../public/tier1/characterset.h
  ../../public/tier1/checksum_md5.h
  ../../public/client_class.h
  ../../public/client_textmessage.h
  ../../public/closedcaptions.h
  ../../public/cmodel.h
  coerciblevariant_t.h
  ../../public/vphysics/collision_set.h
  ../../public/Color.h
  ../../public/tier0/commonmacros.h
  ../../public/mathlib/compressed_light_cube.h
  ../../public/mathlib/compressed_vector.h
  ../../public/const.h
  ../../public/vphysics/constraints.h
  ../../public/coordsize.h
  cplane.h
  damagemodifier.h
  #../../public/tier1/datalru.h
  ../../public/datamap.h
  ../../public/tier0/dbg.h
  ../shared/death_pose.h
  ../shared/decals.h
  ../../public/dlight.h
  ../../public/dt_common.h
  ../../public/dt_recv.h
  ../../public/dt_send.h
  ../../public/dt_utlvector_common.h
  ../../public/dt_utlvector_send.h
  ../shared/effect_dispatch_data.h
  ../shared/ehandle.h
  ../shared/entitydatainstantiator.h
  ../shared/entitylist_base.h
  ../shared/env_detail_controller.h
  EventLog.h
  ../shared/expressionsample.h
  ../../public/tier0/fasttimer.h
  ../../public/filesystem.h
  ../../public/filesystem_helpers.h
  ../../public/tier1/fmtstr.h
  fogcontroller.h
  ../../public/vphysics/friction.h
  ../shared/func_ladder.h
  ../shared/gameeventdefs.h
  ../shared/GameEventListener.h
  ../shared/gamerules_register.h
  ../../public/gametrace.h
  globals.h
  ../../public/globalvars_base.h
  ../shared/groundlink.h
  ../shared/hl2/hl2_vehicle_radar.h
  ../../public/iachievementmgr.h
  ../../public/appframework/IAppSystem.h
  ../../public/icliententity.h
  ../../public/iclientnetworkable.h
  ../../public/iclientrenderable.h
  ../../public/iclientunknown.h
  ../../public/engine/ICollideable.h
  ../../public/tier0/icommandline.h
  ../../public/icvar.h
  ../shared/IEffects.h
  ../../public/engine/IEngineSound.h
  ../../public/engine/IEngineTrace.h
  ../../public/igameevents.h
  ../shared/igamemovement.h
  ../../public/ihandleentity.h
  ../../public/ihltv.h
  ../../public/ihltvdirector.h
  ../../public/vstdlib/IKeyValuesSystem.h
  ilagcompensationmanager.h
  ../../public/vgui/ILocalize.h
  #../../public/ImageLoader.h
  ../../public/materialsystem/imaterial.h
  ../../public/materialsystem/imaterialsystem.h
  ../../public/materialsystem/imaterialvar.h
  ../shared/imovehelper.h
  ../shared/in_buttons.h
  ../../public/inetchannelinfo.h
  ../shared/iplayeranimstate.h
  ../shared/ipredictionsystem.h
  ../../public/irecipientfilter.h
  ../../public/isaverestore.h
  ../../public/iscratchpad3d.h
  ../../public/iserverentity.h
  ../../public/iservernetworkable.h
  ../../public/iserverunknown.h
  ../../public/SoundEmitterSystem/isoundemittersystembase.h
  ../../public/ispatialpartition.h
  ../../public/engine/IStaticPropMgr.h
  ../shared/itempents.h
  ../../public/engine/ivdebugoverlay.h
  ../shared/IVehicle.h
  #../../public/engine/IVEngineCache.h
  ../../public/engine/ivmodelinfo.h
  ../../public/tier1/KeyValues.h
  ../../public/tier0/l2cache.h
  logic_playerproxy.h
  logicrelay.h
  ../../public/map_utils.h
  mapentities.h
  ../shared/mapentities_shared.h
  ../../public/tier0/mem.h
  ../../public/tier0/memalloc.h
  ../../public/tier0/memdbgoff.h
  ../../public/tier0/memdbgon.h
  modelentities.h
  ../shared/movevars_shared.h
  ../shared/mp_shareddefs.h
  ../../public/networkvar.h
  npc_vehicledriver.h
  ../shared/npcevent.h
  ../../public/vphysics/object_hash.h
  #../shared/particle_dispatch_shared.h
  particle_system.h
  physics_cannister.h
  physics_fx.h
  physics_impact_damage.h
  ../../public/tier0/platform.h
  ../../public/vphysics/player_controller.h
  player_voice_listener.h
  playerinfomanager.h
  ../shared/playernet_vars.h
  ../../public/PlayerState.h
  ../shared/precipitation_shared.h
  ../shared/predictable_entity.h
  ../shared/predictioncopy.h
  ../../public/tier1/processor_detect.h
  ../shared/props_shared.h
  ../../public/tier0/protected_things.h
  ../shared/querycache.h
  ../../public/vstdlib/random.h
  ../../public/responserules/response_types.h
  ../shared/rope_helpers.h
  ../shared/saverestore_stringtable.h
  ../shared/saverestore_utlclass.h
  ../shared/saverestore_utlmap.h
  ../shared/saverestore_utlrbtree.h
  ../../public/saverestoretypes.h
  ../../public/scratchpad3d.h
  scratchpad_gamedll_helpers.h
  ../../public/ScratchPadUtils.h
  sendprop_priorities.h
  sendproxy.h
  ../../public/shake.h
  ../shared/shared_classnames.h
  ../shared/shareddefs.h
  ../shared/sharedInterface.h
  ../shared/shot_manipulator.h
  SkyCamera.h
  ../../public/soundchars.h
  ../shared/soundenvelope.h
  ../../public/soundflags.h
  soundscape_system.h
  ../../public/stdstring.h
  ../shared/steamworks_gamestats.h
  ../../public/string_t.h
  ../../public/tier1/stringpool.h
  ../../public/tier1/strtools.h
  ../../public/studio.h
  ../shared/sun_shared.h
  ../shared/takedamageinfo.h
  te_effect_dispatch.h
  tesla.h
  test_stressentities.h
  textstatsmgr.h
  ../../public/texture_group_names.h
  timedeventmgr.h
  ../shared/usercmd.h
  ../shared/usermessages.h
  ../shared/util_shared.h
  ../../public/UtlCachedFileData.h
  ../../public/tier1/utldict.h
  #../../public/tier1/utlfixedlinkedlist.h
  ../../public/tier1/utlfixedmemory.h
  ../../public/tier1/utlhash.h
  ../../public/tier1/utllinkedlist.h
  ../../public/tier1/utlmap.h
  ../../public/tier1/utlmemory.h
  ../../public/tier1/utlmultilist.h
  ../../public/tier1/utlpriorityqueue.h
  ../../public/tier1/utlrbtree.h
  ../../public/tier1/UtlSortVector.h
  ../../public/tier1/utlvector.h
  ../../public/vallocator.h
  variant_t.h
  ../../public/vcollide.h
  ../../public/vcollide_parse.h
  #../../public/tier0/vcr_shared.h
  #../../public/tier0/vcrmode.h
  ../../public/mathlib/vector.h
  ../../public/mathlib/vector2d.h
  ../../public/mathlib/vector4d.h
  vehicle_base.h
  vehicle_baseserver.h
  ../shared/vehicle_viewblend_shared.h
  ../../public/vphysics/vehicles.h
  ../../public/vgui/VGUI.h
  ../../public/vphysics_interface.h
  ../shared/vphysics_sound.h
  ../../public/mathlib/vplane.h
  ../../public/tier0/vprof.h
  ../../public/vstdlib/vstdlib.h
  ../../public/winlite.h
  ../../public/worldsize.h
  ../../public/zip_uncompressed.h
  toolframework_server.h
)

# header directories
include_directories(
  ../../common
  ../../public
  ../../public/tier0
  ../../public/tier1
  ../../game/shared
  ../../game/server/NextBot
  ../../game/server
  ./hl2
  ../../game/shared/hl2
  ./sdk
  ../../game/shared/sdk
  ../../utils/common
)

# link directories
link_directories(
  ../../lib/common
  ../../lib/public
)

# link libraries
link_libraries(
  winmm.lib
  ../../lib/public/bonesetup.lib
  ../../lib/public/choreoobjects.lib
  ../../lib/public/dmxloader.lib
  ../../lib/public/interfaces.lib
  ../../lib/public/mathlib.lib
  ../../lib/public/particles.lib
  ../../lib/public/responserules_runtime.lib
  ../../lib/public/steam_api.lib
  ../../lib/public/tier0.lib
  ../../lib/public/tier1.lib
  ../../lib/public/tier2.lib
  ../../lib/public/tier3.lib
  ../../lib/public/vgui_controls.lib
  ../../lib/public/vstdlib.lib
)

add_library(swarm_skeleton_server SHARED ${SOURCE_FILES} ${HEADER_FILES})

# Target compiler and platform (assuming Visual Studio)
target_compile_features(swarm_skeleton_server PRIVATE)

# Add preprocessor definitions
if (WIN32)
  set(PREPROCESSOR_DEFINITIONS WIN32;_WIN32;_DEBUG;DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;DLLNAME=server;VPCGAME=swarm;VPCGAMECAPS=SWARM;_DLL_EXT=.dll;COMPILER_MSVC32;COMPILER_MSVC;MEMOVERRIDE_MODULE=server;GAME_DLL;VECTOR;VERSION_SAFE_STEAM_API_INTERFACES;PROTECTED_THINGS_ENABLE;sprintf=use_Q_snprintf_instead_of_sprintf;strncpy=use_Q_strncpy_instead;_snprintf=use_Q_snprintf_instead;SDK_SERVER_DLL;SDK_DLL)
  add_compile_definitions(${PREPROCESSOR_DEFINITIONS})
endif (WIN32)
if (UNIX)
  set(PREPROCESSOR_DEFINITIONS LINUX;_LINUX;_DEBUG;DEBUG;POSIX;_POSIX;UNIX;_UNIX;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;DLLNAME=server;VPCGAME=swarm;VPCGAMECAPS=SWARM;_DLL_EXT=.dll;COMPILER_GCC;MEMOVERRIDE_MODULE=server;GAME_DLL;VECTOR;VERSION_SAFE_STEAM_API_INTERFACES;PROTECTED_THINGS_ENABLE;sprintf=use_Q_snprintf_instead_of_sprintf;strncpy=use_Q_strncpy_instead;_snprintf=use_Q_snprintf_instead;SDK_SERVER_DLL;SDK_DLL)
  add_compile_definitions(${PREPROCESSOR_DEFINITIONS})
endif (UNIX)

# Optional: Set output directory for the library
if (WIN32)
  set_target_properties(swarm_skeleton_server PROPERTIES OUTPUT_DIRECTORY server.dll)
endif (WIN32)
